--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 ---
   AllCops:
-    TargetRubyVersion: 2.4
+    TargetRubyVersion: 2.6
   
   Style/FrozenStringLiteralComment:
     Enabled: false
@@ -18,3 +18,6 @@
     Exclude:
       - 'gene_system.gemspec'
       - 'spec/**/*'
+
+  Gemspec/RequiredRubyVersion:
+      Enabled: false
